--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
         <module>distribution</module>
         <module>openmessaging</module>
         <module>logging</module>
+        <module>rocketmq-snode</module>
     </modules>
 
     <build>
