--- a/acl/src/test/resources/conf/plain_acl.yml
+++ b/acl/src/test/resources/conf/plain_acl.yml
@@ -36,7 +36,7 @@ accounts:
   - groupB=SUB
   - groupC=SUB
 
-- accessKey: aliyun.com
+- accessKey: rocketmq2
   secretKey: 12345678
   whiteRemoteAddress: 192.168.1.*
   # if it is admin, it could access all resources
