--- a/distribution/conf/plain_acl.yml
+++ b/distribution/conf/plain_acl.yml
@@ -32,7 +32,7 @@ accounts:
   - groupB=PUB|SUB
   - groupC=SUB
 
-- accessKey: aliyun.com
+- accessKey: rocketmq2
   secretKey: 12345678
   whiteRemoteAddress: 192.168.1.*
   # if it is admin, it could access all resources
