--- a/acl/pom.xml
+++ b/acl/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>rocketmq-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rocketmq-srvutil</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
