--- a/snode/src/main/resources/META-INF/service/flowControl.yml
+++ b/snode/src/main/resources/META-INF/service/flowControl.yml
@@ -1,19 +1,19 @@
 snode:
   countLimit:  # flow control type, only requestCount & requestSize support
     - flowControlResourceName: 310
-      flowControlGrade: directDeny
-      flowControlBehavior: flowControlBehavior
-      flowControlResourceCount: 100000.00 #QPS
+      flowControlGrade: 1
+      flowControlBehavior: 1
+      flowControlResourceCount: 500.00 #QPS
 
     - flowControlResourceName: overall
-      flowControlGrade: directDeny
-      flowControlBehavior: flowControlBehavior
-      flowControlResourceCount: 100000.00 #QPS
+      flowControlGrade: 1
+      flowControlBehavior: 1
+      flowControlResourceCount: 10000.00 #QPS
 
   sizeLimit:
     - flowControlResourceName: 310
-      flowControlGrade: directDeny
-      flowControlBehavior: flowControlBehavior
-      flowControlResourceCount: 10.00 #MB/S
+      flowControlGrade: 1
+      flowControlBehavior: 1
+      flowControlResourceCount: 5.00 #KB/S
 
   topicLimit:
