--- a/snode/pom.xml
+++ b/snode/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>rocketmq-filter</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rocketmq-acl</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
