--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -46,6 +46,10 @@
                     <groupId>org.apache.rocketmq</groupId>
                     <artifactId>rocketmq-example</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.rocketmq</groupId>
+                    <artifactId>rocketmq-snode</artifactId>
+                </dependency>
             </dependencies>
 
             <build>
