--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,7 @@
                         <exclude>*/target/**</exclude>
                         <exclude>*/*.iml</exclude>
                         <exclude>docs/**</exclude>
+                        <exclude>localbin/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
