--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -69,7 +69,7 @@
                         </executions>
                     </plugin>
                 </plugins>
-                <finalName>apache-rocketmq</finalName>
+                <finalName>rocketmq-${project.version}</finalName>
             </build>
         </profile>
 
@@ -104,7 +104,7 @@
                         </executions>
                     </plugin>
                 </plugins>
-                <finalName>apache-rocketmq</finalName>
+                <finalName>rocketmq-client-${project.version}</finalName>
             </build>
         </profile>
     </profiles>
